--- a/ShortStoryNetwork.Repository/ShortStoryNetwork.Repository.csproj
+++ b/ShortStoryNetwork.Repository/ShortStoryNetwork.Repository.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="6.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.27" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.27" />
   </ItemGroup>
 
   <ItemGroup>
