--- a/ShortStoryNetwork/appsettings.json
+++ b/ShortStoryNetwork/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConnectionString": "Data Source=MTR-PC;Initial Catalog=ShortStoryNetworkDB;Integrated Security=True"
+  },
+  "Jwt": {
+    "Key": "ThisismySecretKey",
+    "Issuer": "http://localhost:44305"
   }
 }
